2008-08-27  Kenichi Handa  <handa@m17n.org>

	* fileio.c (report_file_error): Fix handling of multibyte error
	string.

2008-08-27  Andreas Seltenreich  <seltenreich@gmx.de>

	* xterm.c (x_term_init): Temporarily hide the partially
	initialized terminal while calling vendor-specific-keysyms.

2008-08-26  Eli Zaretskii  <eliz@gnu.org>

	* msdos.c (internal_terminal_init): Most initializations done only
	once, especially initial_screen_colors[] and termscript open.

2008-08-26  Chong Yidong  <cyd@stupidchicken.com>

	* eval.c (Fcondition_case): Doc fix.

	* widgetprv.h (EmacsFramePart): Change font member to the new font
	struct.

	* widget.c: Include character.h and font.h for XSETFONT.
	(setup_frame_gcs): Compute X font id from font struct, just once.

2008-08-26  Eli Zaretskii  <eliz@gnu.org>

	* term.c (get_named_tty): Fix last change.

2008-08-26  Chong Yidong  <cyd@stupidchicken.com>

	* indent.c (Fvertical_motion): If moving forward starting from a
	multi-line string, move the iterator to the last line of that
	string.

2008-08-25  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (do_switch_frame): Mark previously displayed frame as
	obscured for FRAME_MSDOS_P frames as well.

2008-08-24  Eli Zaretskii  <eliz@gnu.org>

	* frame.c (make_terminal_frame): Initialize f->terminal,
	f->terminal->reference_count, and scroll bars on MS-DOS as well.
	Set the top frame to newly created frame.
	(Fmake_terminal_frame): Reuse the_only_display_info.

	* vm-limit.c (get_lim_data) [MSDOS]: Use alternative methods of
	estimating available memory.

2008-08-23  David Reitter <david.reitter@gmail.com>

	* nsterm.m (ns_draw_window_cursor): Don't call
	NSDisableScreenUpdates and NSEnableScreenUpdates on
	non-NS_IMPL_COCOA systems.

2008-08-23  Andreas Schwab  <schwab@suse.de>

	* process.c (procfs_system_process_attributes): Fix use of
	uninitialized variables.

2008-08-23  Eli Zaretskii  <eliz@gnu.org>

	* emacs.c (main) [MSDOS]: Call syms_of_xmenu.
